benefits gap fixed

--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,7 @@ ul {
   background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .team-section-container {
