--- a/sass/utils/_containers.scss
+++ b/sass/utils/_containers.scss
@@ -59,6 +59,7 @@ ul {
     background-color: #f5f4fa;
     border-radius: 4px;
     margin-bottom: 30px;
+    margin-right: 30px;
 }
 
 .team-section-container {
